Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           var s = document.createElement('script');
           s.type = 'text/javascript';
           s.async = true;
-          var theUrl = 'http://blog.lombaard.co.uk/harmonograph/just-causes-1.0.0.js';
+          var theUrl = 'https://just-causes-widget.azurewebsites.net/just-causes-1.0.0.js';
           s.src = theUrl;// + ( theUrl.indexOf("?") &gt;= 0 ? "&amp;" : "?") + 'ref=' + encodeURIComponent(window.location.href);
           var embedder = document.getElementById('just-causes-eec47002-14f6-4f4a-985c-85a7e6ed3c59');
           embedder.parentNode.insertBefore(s, embedder);
