--- a/test.html
+++ b/test.html
@@ -23,8 +23,11 @@
     </script>
     
     <p>and once more...</p>
+    
      <script type="text/javascript" id="just-causes-eec47002-14f6-4f4a-985c-85a7e6ed3c59">
       (function() {
+        var self = this;
+        console.log(self);
         function async_load(){
           var s = document.createElement('script');
           s.type = 'text/javascript';
