--- a/index.html
+++ b/index.html
@@ -38,27 +38,15 @@
 
 <p>Warning! Alpha, do not use</p>
 
-<pre><code>&lt;script type="text/javascript" id="just-causes-eec47002-14f6-4f4a-985c-85a7e6ed3c59"&gt;
-      (function() {
-        function async_load(){
-          var s = document.createElement('script');
-          s.type = 'text/javascript';
-          s.async = true;
-          var theUrl = 'https://just-causes-widget.azurewebsites.net/just-causes-1.0.0.js';
-          s.src = theUrl;// + ( theUrl.indexOf("?") &gt;= 0 ? "&amp;" : "?") + 'ref=' + encodeURIComponent(window.location.href);
-          var embedder = document.getElementById('just-causes-eec47002-14f6-4f4a-985c-85a7e6ed3c59');
-          embedder.parentNode.insertBefore(s, embedder);
-        }
-        if (window.attachEvent)
-          window.attachEvent('onload', async_load);
-        else
-          window.addEventListener('load', async_load, false);
-      })();
-    &lt;/script&gt;
-</code></pre>
-      </section>
+<pre><code>&lt;script type="text/javascript" id="just-causes-eec47002-14f6-4f4a-985c-85a7e6ed3c59"&gt;(function(){function async_load(){var s=document.createElement('script');s.type='text/javascript';s.async=true;var theUrl='https://just-causes-widget.azurewebsites.net/just-causes-1.0.0.js?jgaccount=YWx3eW5AanVzdGdpdmluZy5jb20=';s.src=theUrl+(theUrl.indexOf("?") >= 0 ? "&" : "?")+'ref='+encodeURIComponent(window.location.href);var embedder=document.getElementById('just-causes-eec47002-14f6-4f4a-985c-85a7e6ed3c59');embedder.parentNode.insertBefore(s,embedder);}if(window.attachEvent){window.attachEvent('onload',async_load);}else{window.addEventListener('load',async_load,false);}})();&lt;/script&gt;</code></pre>
+      
+	  
+	  <script type="text/javascript" id="just-causes-eec47002-14f6-4f4a-985c-85a7e6ed3c59">(function(){function async_load(){var s=document.createElement('script');s.type='text/javascript';s.async=true;var theUrl='https://just-causes-widget.azurewebsites.net/just-causes-1.0.0.js?jgaccount=YWx3eW5AanVzdGdpdmluZy5jb20=';s.src=theUrl+(theUrl.indexOf("?") >= 0 ? "&" : "?")+'ref='+encodeURIComponent(window.location.href);var embedder=document.getElementById('just-causes-eec47002-14f6-4f4a-985c-85a7e6ed3c59');embedder.parentNode.insertBefore(s,embedder);}if(window.attachEvent){window.attachEvent('onload',async_load);}else{window.addEventListener('load',async_load,false);}})();</script>
+
+	  </section>
     </div>
 
+	
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
@@ -67,7 +55,7 @@
       </footer>
     </div>
 
+	
     
-
   </body>
 </html>
