--- a/index.html
+++ b/index.html
@@ -82,15 +82,10 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/alwynlombaard/just-causes-widget">View on GitHub</a>
-
+        
           <h1 id="project_title">Just-causes-widget Beta</h1>
           <h2 id="project_tagline">A widget to embed on your site showing the causes you&#39;re fundraising for on JustGiving</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/alwynlombaard/just-causes-widget/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/alwynlombaard/just-causes-widget/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
@@ -104,8 +99,10 @@
 
 	<label for="jgaccount">Enter your JustGiving account email</label> 
 	<input type="email" id="jgaccount" ng-model="jgAccount"/>
-	<textarea readonly ng-show="jgAccount" rows="10" cols="80"><script type="text/javascript" id="just-causes-{{guid}}">(function(){function async_load(){var s=document.createElement('script');s.type='text/javascript';s.async=true;var theUrl='https://just-causes-widget.azurewebsites.net/just-causes-1.0.0.js?jgaccount={{jgAccount64()}}';s.src=theUrl+(theUrl.indexOf("?") >= 0 ? "&" : "?")+'ref='+encodeURIComponent(window.location.href);var embedder=document.getElementById('just-causes-{{guid}}');embedder.parentNode.insertBefore(s,embedder);}if(window.attachEvent){window.attachEvent('onload',async_load);}else{window.addEventListener('load',async_load,false);}})();</script></textarea>
-	  
+	<div style="min-height: 300px;">
+		<textarea readonly ng-show="jgAccount" rows="10" cols="80"><script type="text/javascript" id="just-causes-{{guid}}">(function(){function async_load(){var s=document.createElement('script');s.type='text/javascript';s.async=true;var theUrl='https://just-causes-widget.azurewebsites.net/just-causes-1.0.0.js?jgaccount={{jgAccount64()}}';s.src=theUrl+(theUrl.indexOf("?") >= 0 ? "&" : "?")+'ref='+encodeURIComponent(window.location.href);var embedder=document.getElementById('just-causes-{{guid}}');embedder.parentNode.insertBefore(s,embedder);}if(window.attachEvent){window.attachEvent('onload',async_load);}else{window.addEventListener('load',async_load,false);}})();</script></textarea>
+	</div>
+	
 	<!--
 	<div id="jg-widget-guitar-for-good-35"></div><script>(function(){var id="jg-widget-guitar-for-good-35",doc=document,pfx=(window.location.toString().indexOf("https")==0)?"https":"http";var el=doc.getElementById(id);if(el){var js=doc.createElement('script');js.src=pfx+"://widgets.justgiving.com/fundraisingpage/guitar-for-good?enc=ZT1qZy13aWRnZXQtZ3VpdGFyLWZvci1nb29kLTM1Jnc9NDAwJmI9aW5uZXImaWI9dGl0bGUsc3VtbWFyeQ%3D%3D";el.parentNode.insertBefore(js, el);}})();</script>
 	
