--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 			
 			<div ng-show="accountExists" style="margin:20px;">
-				<p>Here is a preview of what your widget looks like.
+				<p>Here is a preview of your widget.
 			
 				<div id="previewWidget" src=""></div>
 			</div>
