test a stylesheet on the test page

--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="stylesheet" type="text/css" media="screen" href="http://blog.lombaard.co.uk/stylesheets/screen.css">
 </head>
 <body>
 <h1>Test the widget</h1>
