--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div>
 				<div ng-show="accountExists">
 					<label for="sourceCode"><p>Copy and paste the following code snippet into your page where you want the widget to appear.</p></label>		
-					<textarea id="sourceCode"  readonly rows="10" cols="80"><script type="text/javascript" id="just-causes-{{guid}}">(function(){function e(){var e=document.createElement("script");e.type="text/javascript";e.async=true;var t="https://just-causes-widget.azurewebsites.net/just-causes-1.0.0.js?jgaccount={{jgAccount64()}}";e.src=t+(t.indexOf("?")>=0?"&":"?")+"ref="+encodeURIComponent(window.location.href);var n=document.getElementById("just-causes-{{guid}}");n.parentNode.insertBefore(e,n)}if(window.attachEvent){window.attachEvent("onload",e)}else{window.addEventListener("load",e,false)}})()</script></textarea>
+					<textarea id="sourceCode"  readonly rows="10" cols="80"><script type="text/javascript" id="just-causes-{{guid}}">(function(){function e(){var e=document.createElement("script");e.type="text/javascript";e.async=true;var t="https://just-causes.azurewebsites.net/just-causes-1.0.0.js?jgaccount={{jgAccount64()}}";e.src=t+(t.indexOf("?")>=0?"&":"?")+"ref="+encodeURIComponent(window.location.href);var n=document.getElementById("just-causes-{{guid}}");n.parentNode.insertBefore(e,n)}if(window.attachEvent){window.attachEvent("onload",e)}else{window.addEventListener("load",e,false)}})()</script></textarea>
 				</div>
 			</div>
 			
